<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.cwcode.commands</groupId>
    <artifactId>Common</artifactId>
    <version>1.3.1</version>

    <name>Common</name>
    <description>Common of commands library (Minecraft)</description>
    <url>https://github.com/KamikotoTkach/TkachCommands/</url>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://github.com/KamikotoTkach/TkachCommands/blob/master/LICENSE</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/KamikotoTkach/TkachCommands.git</connection>
        <url>https://github.com/KamikotoTkach/TkachCommands</url>
        <developerConnection>scm:git:https://github.com/KamikotoTkach/TkachCommands.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>tkach</id>
            <name>Tkachenko Danil</name>
            <url>https://t.me/tkachx</url>
        </developer>
        <developer>
            <id>Soul_KRT</id>
            <name>Egor Yaroslavcev</name>
            <url>https://t.me/Soul_KRT</url>
        </developer>
    </developers>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>

            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
            </distributionManagement>

            <properties>
                <plugin.nexus.staging.ver>1.6.13</plugin.nexus.staging.ver>
                <plugin.maven.source.ver>3.2.1</plugin.maven.source.ver>
                <plugin.maven.javadoc.ver>3.3.1</plugin.maven.javadoc.ver>
                <plugin.maven.gpg.ver>3.0.1</plugin.maven.gpg.ver>
            </properties>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.sonatype.plugins</groupId>
                            <artifactId>nexus-staging-maven-plugin</artifactId>
                            <version>${plugin.nexus.staging.ver}</version>
                            <extensions>true</extensions>
                            <configuration>
                                <serverId>ossrh</serverId>
                                <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                                <autoReleaseAfterClose>true</autoReleaseAfterClose>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-source-plugin</artifactId>
                            <version>${plugin.maven.source.ver}</version>
                            <executions>
                                <execution>
                                    <id>attach-sources</id>
                                    <goals>
                                        <goal>jar-no-fork</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>${plugin.maven.javadoc.ver}</version>
                            <executions>
                                <execution>
                                    <id>attach-javadocs</id>
                                    <goals>
                                        <goal>jar</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-gpg-plugin</artifactId>
                            <version>${plugin.maven.gpg.ver}</version>
                            <executions>
                                <execution>
                                    <id>sign-artifacts</id>
                                    <phase>verify</phase>
                                    <goals>
                                        <goal>sign</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <gpgArguments>
                                    <gpgArgument>--pinentry-mode</gpgArgument>
                                    <gpgArgument>loopback</gpgArgument>
                                </gpgArguments>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ru.cwcode.cwutils</groupId>
            <artifactId>CWUtils</artifactId>
            <version>2.2.1</version>
        </dependency>
    </dependencies>
</project>